--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     
 </head>
 <body>
+    <a href="learn.html">things have learnt</a>
     <main>
         <section>
             <img src="Images/Perfume.jpeg" alt="Picture of a perfume"/>
