--- a/learn.html
+++ b/learn.html
@@ -21,7 +21,7 @@
             <li>title</li>
             <li>style</li>
             <li>Stike</li>
-            <li></li>
+            <li>body</li>
         </ol>
         <li>Github</li>
         <li>Vscode setup</li>
