--- a/index.html
+++ b/index.html
@@ -11,14 +11,13 @@
 <body>
     <a href="learn.html">things have learnt</a>
     <main>
-        <section>
+        <section class="section-one">
             <img src="Images/Perfume.jpeg" alt="Picture of a perfume"/>
         </section>
-        <section>
+        <section class="section-2">
             <p>PERFUME</p>
             <h1>Gabriella Essence Eau De Parfum</h1>
-            <p>A floral,solar and voluptuous interpretation composed by olivier polge, perfumer-creator for the House of CHANEL.
-            <p>$169.99</p>
+            <p>A floral,solar and voluptuous interpretation composed by olivier polge, perfumer-creator for the House of CHANEL.</p>
            <p><span>$149.99</span> <strike><span>$169.99</span></strike></p>
            
 
